dnl Process this file with autoconf to produce a configure script.
dnl
dnl This file is free software; as a special exception the author gives
dnl unlimited permission to copy and/or distribute it, with or without
dnl modifications, as long as this notice is preserved.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
dnl implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT([kls], [1.0], [klsorge@gmail.com])
AM_INIT_AUTOMAKE

# Setup our emacs lisp processing
AM_PATH_LISPDIR

AC_CONFIG_FILES([
	Makefile
	lisp/Makefile
	script/Makefile])
AC_OUTPUT
