# Makefile.am for kls/lisp.
#
# Copyright 2012, Kurt Sorge.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

lisp_LISP = kls-setup.el kls-common.el kls-c.el kls-java.el kls-shell.el \
kls-lisp.el

EXTRA_DIST = $(lisp_LISP)